  FileMaker Server 12 or later if using FileMaker Server.
- The second parameter of the doAfterCreateToDB method is passed all fields of the newly created record.
  Previously it was just a key field value of new record.
- Avoid outputting messages in an error log file if there is no portal objects on the layout when using 
  FileMaker Server.
- [BUG FIX] Fix detection of params.php file.
- [BUG FIX] Fix loading DB_TextFile class. The affected version is 5.2 only.
- [BUG FIX] Modify INTERMediator.totalRecordCount after IMLibPageNavigation.deleteRecordFromNavi method.
- [BUG FIX] Fix detecting the Post Only Mode when the value of the enclosure's data-im-control element
  is "enclosure post".
- [BUG FIX] Fix not to remove focus from input field on the Post Only Mode when using validation in some 
  cases.
- [BUG FIX] Definition File Editor can store the some values that are as array.
- [BUG FIX] If the "key" key wasn't supplied, the calculation goes wrong results.
- [BUG FIX] Fix buildup.sh to include "themes" directory correctly. The affected version is 5.2 only.

Ver.5.2 (August 24, 2015)
- Record Copying is supported for single record, and also with associated records for PDO.
- Authentication with an LDAP user.
- Handle some operators of conditions ('!=', '>', '>=', '<', '<=') as valid when using FileMaker 
  Server.
- The "button-names" key in a context of definition file supports to customize the button names.
- The list aggregate function was introduced.
- Add IMLIbUI.validation() as a public method.
- INTER-Mediator-Server VM can update with just "git pull origin master" command.
- DataConverter classes for currency and number was improved in case of missing locale information.
- The following 4 methods can be defined and they are going to be called when the page moves to
  the master/detail navigation. All function can have two parameters that are referring the master
  and detail contexts.
      INTERMediatorOnPage.naviBeforeMoveToDetail