@@ -43,9 +43,23 @@ class FileUploader
           }
         }
 
+        $url = NULL;
+        if (isset($_POST['_im_redirect'])) {
+            $url = $this->getRedirectUrl($_POST['_im_redirect']);
+            if (is_null($url)) {
+                header("HTTP/1.1 500 Internal Server Error");
+                $dbProxyInstance->logger->setErrorMessage('Header may not contain more than a single header, new line detected.');
+                $dbProxyInstance->processingRequest($options, 'noop');
+                $dbProxyInstance->finishCommunication();
+                $dbProxyInstance->exportOutputDataAsJSON();
+                return;
+            }
+            error_log($url);
+        }
+        
         if (!isset($options['media-root-dir']) && $useContainer === FALSE) {
-            if (isset($_POST["_im_redirect"])) {
-                header("Location: {$_POST["_im_redirect"]}");
+            if (!is_null($url)) {
+                header('Location: ' . $url);
             } else {
                 $dbProxyInstance->logger->setErrorMessage("'media-root-dir' isn't specified");
                 $dbProxyInstance->processingRequest($options, "noop");
@@ -63,8 +77,8 @@ class FileUploader
         }
 
         if (count($_FILES) < 1) {
-            if (isset($_POST["_im_redirect"])) {
-                header("Location: {$_POST["_im_redirect"]}");
+            if (!is_null($url)) {
+                header('Location: ' . $url);
             } else {
                 $dbProxyInstance->logger->setErrorMessage("No file wasn't uploaded.");
                 $dbProxyInstance->processingRequest($options, "noop");
@@ -127,8 +141,8 @@ class FileUploader
         }
         $result = move_uploaded_file($util->removeNull($fileInfo['tmp_name']), $filePath);
         if (!$result) {
-            if (isset($_POST["_im_redirect"])) {
-                header("Location: {$_POST["_im_redirect"]}");
+            if (!is_null($url)) {
+                header('Location: ' . $url);
             } else {
                 $dbProxyInstance->logger->setErrorMessage("Fail to move the uploaded file in the media folder.");
                 $dbProxyInstance->processingRequest($options, "noop");
@@ -234,8 +248,8 @@ class FileUploader
         }
         $dbProxyInstance->finishCommunication();
         $dbProxyInstance->exportOutputDataAsJSON();
-        if (isset($_POST["_im_redirect"])) {
-            header("Location: {$_POST["_im_redirect"]}");
+        if (!is_null($url)) {
+            header('Location: ' . $url);
         }
     }
 
@@ -256,6 +270,15 @@ class FileUploader
             echo "<div style='position:absolute;left:0;top:0;padding-left:8px;'>";
             echo $progress  . " %";
             echo "</div></div></div></body></html>";
+        }
+    }
+    
+    protected function getRedirectUrl($url)
+    {
+        if(strpos(strtolower($url), "%0a") !== false || strpos(strtolower($url), "%0d") !== false){
+            return NULL;
+        } else {
+            return $url;
         }
     }
 }
