@@ -1,1 +1,1 @@
-{"version":"5.3-dev","releasedate":"2015-12-23"}
+{"version":"5.3-dev","releasedate":"2015-12-26"}
